---
source: crates/tokmd-analysis-html/tests/snapshots.rs
expression: rows_joined
---
<td class="path" data-path="src/main.rs">src/main.rs</td><td data-module="src">src</td><td data-lang="Rust"><span class="lang-badge">Rust</span></td><td class="num" data-lines="650">650</td><td class="num" data-code="500">500</td><td class="num" data-tokens="1500">1.5K</td><td class="num" data-bytes="25000">25.0K</td></tr>
---
<td class="path" data-path="src/utils.py">src/utils.py</td><td data-module="src">src</td><td data-lang="Python"><span class="lang-badge">Python</span></td><td class="num" data-lines="390">390</td><td class="num" data-code="300">300</td><td class="num" data-tokens="900">900</td><td class="num" data-bytes="15000">15.0K</td></tr>
---
<td class="path" data-path="web/app.ts">web/app.ts</td><td data-module="web">web</td><td data-lang="TypeScript"><span class="lang-badge">TypeScript</span></td><td class="num" data-lines="260">260</td><td class="num" data-code="200">200</td><td class="num" data-tokens="600">600</td><td class="num" data-bytes="10000">10.0K</td></tr>
                </tbody>
            </table>
        </div>
    </div>

    <footer>
        Generated by <a href="https://github.com/EffortlessMetrics/tokmd">tokmd</a>
    </footer>

    <script>
    const REPORT_DATA = {"files":[{"code":500,"lang":"Rust","lines":650,"module":"src","path":"src/main.rs","tokens":1500},{"code":300,"lang":"Python","lines":390,"module":"src","path":"src/utils.py","tokens":900},{"code":200,"lang":"TypeScript","lines":260,"module":"web","path":"web/app.ts","tokens":600}]};

    // Language colors
    const LANG_COLORS = {
        'Rust': '#dea584',
        'JavaScript': '#f1e05a',
        'TypeScript': '#3178c6',
        'Python': '#3572A5',
        'Go': '#00ADD8',
        'Java': '#b07219',
        'C': '#555555',
        'C++': '#f34b7d',
        'C#': '#178600',
        'Ruby': '#701516',
        'PHP': '#4F5D95',
        'Swift': '#F05138',
        'Kotlin': '#A97BFF',
        'Scala': '#c22d40',
        'HTML': '#e34c26',
        'CSS': '#563d7c',
        'SCSS': '#c6538c',
        'JSON': '#292929',
        'YAML': '#cb171e',
        'TOML': '#9c4221',
        'Markdown': '#083fa1',
        'Shell': '#89e051',
        'SQL': '#e38c00',
    };

    function getLangColor(lang) {
        return LANG_COLORS[lang] || '#' + Math.floor(Math.random()*16777215).toString(16).padStart(6, '0');
    }

    // Treemap implementation (squarify algorithm)
    function squarify(data, x, y, width, height) {
        if (data.length === 0 || width <= 0 || height <= 0) return [];

        const total = data.reduce((sum, d) => sum + d.value, 0);
        if (total === 0) return [];

        const rects = [];
        let remaining = [...data];
        let cx = x, cy = y, cw = width, ch = height;

        while (remaining.length > 0) {
            const vertical = ch > cw;
            const side = vertical ? ch : cw;
            const scale = (cw * ch) / total;

            let row = [];
            let rowArea = 0;
            let worst = Infinity;

            for (const item of remaining) {
                const testRow = [...row, item];
                const testArea = rowArea + item.value * scale;
                const testWorst = getWorst(testRow, testArea, side, scale);

                if (testWorst <= worst) {
                    row = testRow;
                    rowArea = testArea;
                    worst = testWorst;
                } else {
                    break;
                }
            }

            // Layout row
            const rowSide = rowArea / side;
            let offset = 0;

            for (const item of row) {
                const itemSize = (item.value * scale) / rowSide;
                if (vertical) {
                    rects.push({ ...item, x: cx, y: cy + offset, w: rowSide, h: itemSize });
                } else {
                    rects.push({ ...item, x: cx + offset, y: cy, w: itemSize, h: rowSide });
                }
                offset += itemSize;
            }

            // Update remaining area
            if (vertical) {
                cx += rowSide;
                cw -= rowSide;
            } else {
                cy += rowSide;
                ch -= rowSide;
            }

            remaining = remaining.slice(row.length);
        }

        return rects;
    }

    function getWorst(row, area, side, scale) {
        if (row.length === 0) return Infinity;
        const s2 = side * side;
        let min = Infinity, max = 0;
        for (const item of row) {
            const v = item.value * scale;
            min = Math.min(min, v);
            max = Math.max(max, v);
        }
        return Math.max((s2 * max) / (area * area), (area * area) / (s2 * min));
    }

    function renderTreemap() {
        const container = document.getElementById('treemap');
        const width = container.offsetWidth;
        const height = container.offsetHeight;
        container.innerHTML = '';
        container.style.position = 'relative';

        // Aggregate by module
        const moduleData = {};
        for (const file of REPORT_DATA.files || []) {
            const mod = file.module || '(root)';
            if (!moduleData[mod]) moduleData[mod] = { name: mod, value: 0, lang: file.lang };
            moduleData[mod].value += file.code || file.lines || 1;
        }

        const data = Object.values(moduleData).sort((a, b) => b.value - a.value).slice(0, 50);
        const rects = squarify(data, 0, 0, width, height);

        for (const rect of rects) {
            const div = document.createElement('div');
            div.className = 'treemap-cell';
            div.style.left = rect.x + 'px';
            div.style.top = rect.y + 'px';
            div.style.width = rect.w + 'px';
            div.style.height = rect.h + 'px';
            div.style.background = getLangColor(rect.lang);

            const label = document.createElement('div');
            label.className = 'treemap-label';
            label.textContent = rect.name + ' (' + rect.value.toLocaleString() + ')';
            div.appendChild(label);

            div.title = rect.name + ': ' + rect.value.toLocaleString() + ' lines';
            container.appendChild(div);
        }
    }

    // Table filtering
    document.getElementById('search').addEventListener('input', function(e) {
        const filter = e.target.value.toLowerCase();
        const rows = document.querySelectorAll('#files-table tbody tr');
        rows.forEach(row => {
            const text = row.textContent.toLowerCase();
            row.classList.toggle('hidden', filter && !text.includes(filter));
        });
    });

    // Table sorting
    let sortCol = null, sortAsc = true;
    document.querySelectorAll('#files-table th').forEach(th => {
        th.addEventListener('click', function() {
            const col = this.dataset.sort;
            if (sortCol === col) sortAsc = !sortAsc;
            else { sortCol = col; sortAsc = true; }

            const tbody = document.querySelector('#files-table tbody');
            const rows = Array.from(tbody.querySelectorAll('tr'));

            rows.sort((a, b) => {
                const aVal = a.querySelector(`[data-${col}]`)?.dataset[col] || a.cells[getColIndex(col)].textContent;
                const bVal = b.querySelector(`[data-${col}]`)?.dataset[col] || b.cells[getColIndex(col)].textContent;
                const aNum = parseFloat(aVal.replace(/,/g, ''));
                const bNum = parseFloat(bVal.replace(/,/g, ''));
                if (!isNaN(aNum) && !isNaN(bNum)) {
                    return sortAsc ? aNum - bNum : bNum - aNum;
                }
                return sortAsc ? aVal.localeCompare(bVal) : bVal.localeCompare(aVal);
            });

            rows.forEach(row => tbody.appendChild(row));
        });
    });

    function getColIndex(col) {
        const map = { path: 0, module: 1, lang: 2, lines: 3, code: 4, tokens: 5, bytes: 6 };
        return map[col] || 0;
    }

    // Initialize
    window.addEventListener('load', renderTreemap);
    window.addEventListener('resize', renderTreemap);
    </script>
</body>
</html>
